infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: etqan.dev
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 4001

          - path: /api/admin/?(.*)
            pathType: Prefix
            backend:
              service:
                name: adminstration-srv
                port:
                  number: 4000
          
          
          - path: /api/assessment/?(.*)
            pathType: Prefix
            backend:
              service:
                name: course-srv
                port:
                  number: 8000


          - path: /api/prgservice/?(.*)
            pathType: Prefix
            backend:
              service:
                name: program-srv
                port:
                  number: 8080


          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
